# nexus-ai

./: .gitignore  README.md  pyproject.toml
examples/: conftest.py
examples/customer_service/: __init__.py  test_flows.py
examples/infinite_loop_demo/: system.py  test_loop_detection.py
examples/research_crew/: README.md  test_crew.py
examples/structural_testing/: test_graph_validation.py
nexus_ai/: __init__.py  pytest_plugin.py
nexus_ai/assertions/: __init__.py  coordination.py  system.py  tools.py
nexus_ai/interceptors/: __init__.py  base.py  crewai.py  langgraph.py
nexus_ai/mocking/: __init__.py  mock_agent.py
nexus_ai/trace/: __init__.py  pretty.py  storage.py
synkt/: __init__.py  pytest_plugin.py  server.py
synkt-ui/: package-lock.json
synkt-ui/app/: page.tsx
synkt-ui/components/agent-visualization/: agent-node.tsx  animated-edge.tsx  cost-panel.tsx  graph-canvas.tsx  index.ts  topology-panel.tsx
synkt-ui/hooks/: use-trace-stream.ts
synkt/analysis/: __init__.py  graph_topology.py
synkt/assertions/: __init__.py  coordination.py  structural.py  system.py  tools.py
synkt/interceptors/: __init__.py  crewai.py  langgraph.py
synkt/mocking/: __init__.py
synkt/trace/: __init__.py  collector.py  models.py  pretty.py  storage.py
tests/: test_assertions.py  test_cost_prediction.py  test_graph_topology.py  test_langgraph_interceptor.py  test_trace_models.py  test_trace_pretty.py
