[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synkt"
version = "0.2.0"
description = "Testing framework for multi-agent LLM systems"
readme = "docs/DESIGN.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
]
langgraph = [
  "langgraph>=0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "examples"]

